fix alignment

--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,7 @@ section {
   justify-content: center;
   align-items: center;
   font-size: 1rem;
+  text-align: center;
 }
 
 .news__description {
